Fixed messageArea css to not overflow with long words

--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,6 @@
   gap: 0.5rem;
 }
 
-@media only screen and (max-width: 62rem) {
-  
-  .ListContainer {
-    width: 90%;
-  }
-
-  .formContainer {
-    width: 90%;
-  }
-}
-
 .ListItemContainer {
   color: #363537;
   display: flex;
@@ -29,6 +18,21 @@
   gap: 1em;
   padding: 0.5rem 0.5rem 0 0.5rem;
   height: 480px;
+}
+
+@media only screen and (max-width: 62rem) {
+  
+  .ListContainer {
+    width: 90%;
+  }
+
+  .ListItemContainer {
+    flex-direction: column;
+  }
+
+  .formContainer {
+    width: 90%;
+  }
 }
 
 .ListItemHeader {
@@ -56,21 +60,21 @@
 }
 
 .ListItemChatContainer {
+  flex: 0 0 40%;
   display: flex;
   flex-direction: column;
   background-color: lightslategrey;
-  flex-basis: 40%;
   gap: 0.15rem;
 }
 
 .ListItemMessagesArea {
   font-size: 1.1rem;
-  flex-basis: 80%;
+  flex: 0 0 80%;
   background-color: lightslategrey;
   margin: 0 auto;
   width: 95%;
-  overflow-wrap: break-word;
   overflow: auto;
+  overflow-wrap: anywhere;
 }
 
 .ListItemSendMessages {
@@ -78,6 +82,7 @@
   margin: 0 auto 0.5rem auto;
   flex-basis: 20%;
   box-sizing: border-box;
+  background-color: rgb(191, 203, 214);
   width: 95%;
   resize: none;
 }
@@ -86,8 +91,12 @@
   background-color: red;
 }
 
+.ListItemMessage:hover {
+  background-color: rgb(191, 203, 214);
+}
+
 .ListItemSendMessages:active, .ListItemSendMessages:focus {
-  background-color: grey;
+  background-color:white;
 }
 
 .CenterNoWidth {
@@ -98,8 +107,12 @@
   margin: 0 auto;
 }
 
-.scrollable-element {
+.Scrollable-Element {
   scrollbar-width: thin;
+}
+
+.Hidden-Scrollable-Element {
+  scrollbar-width: none;
 }
 
 .FormContainer {
